# json-logic-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
json_logic/: __init__.py
tests/: test_json_logic.py
