[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json-logic-py"
version = "1.0.0"
description = "Build complex rules, serialize them as JSON, and execute them in Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "varun kumar", email = "varunkumar@gmail.com" }]
keywords = ["json-logic", "rules-engine", "json"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/nadirizr/json-logic-py"
Repository = "https://github.com/nadirizr/json-logic-py"
Issues = "https://github.com/nadirizr/json-logic-py/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "isort>=5.0",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["json_logic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["json_logic"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B006"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

